- Refactor layout components for consistency and improved responsiveness across pages. - Update styles for `CVSect`, `CVElement`, and `HeaderNav` to enhance appearance and usability. - Refine `Contact Me` page with modal for feedback and improved form structure. - Expand project static data with additional entries and improve skill representation in the resume. - Adjust static and dynamic font usage to maintain design uniformity. - Fix minor bugs and improve overall styling consistency.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,9 @@ select,
     appearance: base-select;
 }
 select::picker-icon {
+    order: 1;
+    margin-left: 0;
+    padding-right: 2px;
     color: #999999;
     transition: 0.4s rotate;
 }
